idf_component_register(SRCS 
"main.cpp"
"config/tire_pressure_monitor_config.c" 
"domains/labels/Label.cpp"
"domains/buttons/Button.cpp"
"domains/sensors/pressure/Pressure.cpp"
"domains/sensors/temperature/Temperature.cpp"
"domains/screens/Screen.cpp"
"domains/screens/main/MainScreen.cpp"
"domains/screens/menu/MenuScreen.cpp"
"lvgl_demo_ui.cpp"
INCLUDE_DIRS ".")
